apps/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ev-ai-inference-api
  namespace: fastapi
spec:
  type: NodePort
  selector:
    app: ev-ai-inference-api
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
